--- a/add.html
+++ b/add.html
@@ -16,6 +16,11 @@
 					<img src="img/logo.png">
 				</a>
 				</div>
+				<div class="logout">
+					<a href="#">log out</a>
+					
+
+				</div>
 				
 				<div class="nav-bar">
 					<ul>
@@ -173,13 +178,12 @@
 				  </div>
 			</section>
 			<section class="right-section">
-				<h4>TOP10</h4>
 				<ul>
 					<li>
-						<a href="http://book.douban.com/subject/1084336/">小王子</a>
+							<img src="img/avatar.jpeg">
 					</li>
 					<li>
-						<a href="http://book.douban.com/subject/1007305/">红楼梦</a>
+						<span>userName</span>
 					</li>
 				</ul>
 
@@ -187,7 +191,14 @@
 			</article>
 
 			
-			<footer></footer>
+			<footer>
+				<p>
+					<a href="#">Contact us</a> | <a href="#">Feedback</a>
+				</p>
+				<p class="copy-right">
+					Copyright © 2013 - 2014 BookShare.All Rights Reserved.
+				</p>
+			</footer>
 		</div>
 	
 	<script src="js/jquery-1.8.0.js"></script>	
