--- a/add.html
+++ b/add.html
@@ -2,10 +2,10 @@
 	<head>
 		<meta charset="UTF-8">
 			<title></title>
-			<link rel="stylesheet" href="css/reset.css">
-			<link rel="stylesheet" href="css/style.css">
-			
 			<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+			<link rel="stylesheet" href="css/reset.css">
+			<link rel="stylesheet" type="text/css" href="css/common.css">
+			<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
@@ -18,8 +18,6 @@
 				</div>
 				<div class="logout">
 					<a href="#">log out</a>
-					
-
 				</div>
 				
 				<div class="nav-bar">
